--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-system-access": "^1.0.4",
     "jotai": "^2.13.1",
     "lucide-react": "^0.485.0",
+    "motion": "^12.23.12",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
